--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Inicio | MarStone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
@@ -22,13 +23,13 @@
         <nav>
             <ul class="navegador">
                 <li>
-                    <a>PRODUCTOS</a>
+                    <a href="#secDos">PRODUCTOS</a>
                 </li>
                 <li>
-                    <a>INFORMACIÓN</a>
+                    <a href="#secCuatro">INFORMACIÓN</a>
                 </li>
                 <li>
-                    <a>NOSOTROS</a>
+                    <a href="#secCinco">CONTACTANOS</a>
                 </li>
             </ul>
         </nav>
@@ -46,17 +47,196 @@
             </div>
         </section>
 
-        <section class="secDos">
+        <section id="secDos">
             <div class="clasUno">
                 <h2>PRODUCTOS</h2>
             </div>
-            <div class="clasDos"></div>
-            <div class="clasTres"></div>
-            <div class="clasCuatro"></div>
         </section>
 
         <section class="secTres">
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aperiam incidunt molestiae eaque cupiditate ipsum. Omnis architecto officiis dignissimos eos eum nostrum, in autem, praesentium distinctio qui dolore, suscipit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius officiis nemo iste dolorum eaque repudiandae minima quod ipsum quibusdam voluptatum! Officiis harum rerum blanditiis necessitatibus cumque nisi esse quidem expedita? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe quae modi non possimus, accusantium, rerum quo dolor aperiam beatae, eos necessitatibus. Et, minus! Modi iste harum a aperiam minima nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non, ipsa, perferendis, commodi aliquam explicabo ex et possimus voluptatibus aliquid vitae! Quam cupiditate sed sapiente consequatur molestias mollitia, enim dolore.</p>
+            <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <div class="container-card">
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container-card">
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container-card">
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+
+        <section id="secCuatro">
+            <div class="clasUno">
+                <h2>INFORMACIÓN</h2>
+            </div>
+            <div class="clasDos">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aperiam incidunt molestiae eaque cupiditate ipsum. Omnis architecto officiis dignissimos eos eum nostrum, in autem, praesentium distinctio qui dolore, suscipit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius officiis nemo iste dolorum eaque repudiandae minima quod ipsum quibusdam voluptatum! Officiis harum rerum blanditiis necessitatibus cumque nisi esse quidem expedita? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe quae modi non possimus, accusantium, rerum quo dolor aperiam beatae, eos necessitatibus. Et, minus! Modi iste harum a aperiam minima nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non, ipsa, perferendis, commodi aliquam explicabo ex et possimus voluptatibus aliquid vitae! Quam cupiditate sed sapiente consequatur molestias mollitia, enim dolore.</p>
+            </div>
+        </section>
+
+        <section id="secCinco">
+            <div class="clasUno">
+                <h2>CONTACTANOS</h2>
+            </div>
+            <div class="clasDos">
+                <form action="" method="post">
+                    <fieldset class="formNos">
+                        <input class="nosUnos" type="text" placeholder="Nombre">
+                        <input class="nosDos" type="date" placeholder="Fecha de nacimiento">
+                        <input class="nosTres" type="email" placeholder="Correo electrónico">
+                        <input class="nosCuatro" type="number" placeholder="Nº de teléfono">
+                        <textarea class="nosCinco"> </textarea>
+                    </fieldset>
+                    <input class="envNos" type="submit">
+                </form>
+            </div>
         </section>
     </main>
 
@@ -77,5 +257,7 @@
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
 </body>
 </html>
