--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
                         <div class="container-card">
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 1</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -71,10 +71,10 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 2</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -82,10 +82,10 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 3</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -93,58 +93,10 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container-card">
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 4</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -156,10 +108,10 @@
                         <div class="container-card">
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 5</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -167,10 +119,10 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 6</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -178,10 +130,10 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 7</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -189,10 +141,58 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/Amatista.jpg" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista</h5>
+                                    <h5 class="card-title">Amatista 8</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container-card">
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista 9</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista 10</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista 11</h5>
+                                    <p class="card-text">Piedra energetica</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista 12</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -217,7 +217,7 @@
                 <h2>INFORMACIÓN</h2>
             </div>
             <div class="clasDos">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aperiam incidunt molestiae eaque cupiditate ipsum. Omnis architecto officiis dignissimos eos eum nostrum, in autem, praesentium distinctio qui dolore, suscipit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius officiis nemo iste dolorum eaque repudiandae minima quod ipsum quibusdam voluptatum! Officiis harum rerum blanditiis necessitatibus cumque nisi esse quidem expedita? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe quae modi non possimus, accusantium, rerum quo dolor aperiam beatae, eos necessitatibus. Et, minus! Modi iste harum a aperiam minima nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non, ipsa, perferendis, commodi aliquam explicabo ex et possimus voluptatibus aliquid vitae! Quam cupiditate sed sapiente consequatur molestias mollitia, enim dolore.</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aperiam incidunt molestiae eaque cupiditate ipsum. Omnis architecto officiis dignissimos eos eum nostrum, in autem, praesentium distinctio qui dolore, suscipit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius officiis nemo iste dolorum eaque repudiandae minima quod ipsum quibusdam voluptatum! Officiis harum rerum blanditiis necessitatibus cumque nisi esse quidem expedita? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe quae modi non possimus, accusantium, rerum quo dolor aperiam beatae, eos necessitatibus. Et, minus! Modi iste harum a aperiam minima nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non, ipsa, perferendis, commodi aliquam explicabo ex et possimus voluptatibus aliquid vitae!</p>
             </div>
         </section>
 
