--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Inicio | MarStone</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.12/sweetalert2.min.css" integrity="sha512-yX1R8uWi11xPfY7HDg7rkLL/9F1jq8Hyiz8qF4DV2nedX4IVl7ruR2+h3TFceHIcT5Oq7ooKi09UZbI39B7ylw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
@@ -20,19 +21,28 @@
                 <img src="./assets/img/gemstone.png" alt="Logo de la marca">
             </a>
         </div>
-        <nav>
+
+        <nav class="fix">
             <ul class="navegador">
                 <li>
                     <a href="#secDos">PRODUCTOS</a>
-                </li>
-                <li>
-                    <a href="#secCuatro">INFORMACIÓN</a>
                 </li>
                 <li>
                     <a href="#secCinco">CONTACTANOS</a>
                 </li>
             </ul>
         </nav>
+
+        <d class="container-icon">
+            <div class="container-cart-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" class="icon-cart">
+                    <path fill-rule="evenodd" d="M7.5 6v.75H5.513c-.96 0-1.764.724-1.865 1.679l-1.263 12A1.875 1.875 0 004.25 22.5h15.5a1.875 1.875 0 001.865-2.071l-1.263-12a1.875 1.875 0 00-1.865-1.679H16.5V6a4.5 4.5 0 10-9 0zM12 3a3 3 0 00-3 3v.75h6V6a3 3 0 00-3-3zm-3 8.25a3 3 0 106 0v-.75a.75.75 0 011.5 0v.75a4.5 4.5 0 11-9 0v-.75a.75.75 0 011.5 0v.75z" clip-rule="evenodd" />
+                </svg>
+                <div class="count-products">
+                    <span id="contador-productos">0</span>
+                </div>
+            </div>
+        </div>
     </header>
 
     <main>
@@ -54,16 +64,39 @@
         </section>
 
         <section class="secTres">
+            
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="container-card">
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 1</h5>
+                                    <h5 class="card-title">Amatista</h5>
+                                    <p class="card-text">Piedra de amor</p>
+                                    <p class="card-text">$500</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/onix.png" class="card-img-top" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Onix</h5>
+                                    <p class="card-text">Piedra de proteccion</p>
+                                    <p class="card-text">$700</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Amatista 5</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -71,32 +104,10 @@
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 2</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista 3</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista 4</h5>
+                                    <h5 class="card-title">Amatista 5</h5>
                                     <p class="card-text">Piedra energetica</p>
                                     <p class="card-text">$500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
@@ -210,31 +221,23 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+
         </section>
 
         <section id="secCuatro">
             <div class="clasUno">
-                <h2>INFORMACIÓN</h2>
-            </div>
-            <div class="clasDos">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo, aperiam incidunt molestiae eaque cupiditate ipsum. Omnis architecto officiis dignissimos eos eum nostrum, in autem, praesentium distinctio qui dolore, suscipit aliquam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius officiis nemo iste dolorum eaque repudiandae minima quod ipsum quibusdam voluptatum! Officiis harum rerum blanditiis necessitatibus cumque nisi esse quidem expedita? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Saepe quae modi non possimus, accusantium, rerum quo dolor aperiam beatae, eos necessitatibus. Et, minus! Modi iste harum a aperiam minima nulla? Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat non, ipsa, perferendis, commodi aliquam explicabo ex et possimus voluptatibus aliquid vitae!</p>
-            </div>
-        </section>
-
-        <section id="secCinco">
-            <div class="clasUno">
                 <h2>CONTACTANOS</h2>
             </div>
             <div class="clasDos">
-                <form action="" method="post">
+                <form id="form-registrar" action="" method="post">
                     <fieldset class="formNos">
-                        <input class="nosUnos" type="text" placeholder="Nombre">
-                        <input class="nosDos" type="date" placeholder="Fecha de nacimiento">
-                        <input class="nosTres" type="email" placeholder="Correo electrónico">
-                        <input class="nosCuatro" type="number" placeholder="Nº de teléfono">
-                        <textarea class="nosCinco"> </textarea>
+                        <input id="nomb" class="nosUnos" type="text" placeholder="Nombre">
+                        <input id="nacim" class="nosDos" type="date" placeholder="Fecha de nacimiento">
+                        <input id="corr" class="nosTres" type="email" placeholder="Correo electrónico">
+                        <input id="tele" class="nosCuatro" type="number" placeholder="Nº de teléfono">
+                        <textarea id="desc" class="nosCinco"> </textarea>
                     </fieldset>
-                    <input class="envNos" type="submit">
+                    <button class="envNos">Enviar</button>
                 </form>
             </div>
         </section>
@@ -257,7 +260,12 @@
         </div>
     </footer>
 
+    
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    <script src="./model/cliente.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert2/11.7.12/sweetalert2.min.js" integrity="sha512-JbRQ4jMeFl9Iem8w6WYJDcWQYNCEHP/LpOA11LaqnbJgDV6Y8oNB9Fx5Ekc5O37SwhgnNJdmnasdwiEdvMjW2Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
