--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Amatista</h5>
-                                    <p class="card-text">Piedra de amor</p>
-                                    <p class="card-text">$500</p>
+                                    <p class="card-text">Piedra de tranquilidad</p>
+                                    <p class="card-text">$900</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
@@ -86,78 +86,30 @@
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Onix</h5>
-                                    <p class="card-text">Piedra de proteccion</p>
-                                    <p class="card-text">$700</p>
+                                    <p class="card-text">Piedra de protección</p>
+                                    <p class="card-text">$1200</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="">
+                                    <img src="./assets/img/agata.png" class="card-img-top" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 5</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
+                                    <h5 class="card-title">Ágata</h5>
+                                    <p class="card-text">Piedra de equilibrio</p>
+                                    <p class="card-text">$1100</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="">
+                                    <img src="./assets/img/cuarzorosa.png" class="card-img-top" alt="">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 5</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carousel-item">
-                        <div class="container-card">
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista 5</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista 6</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista 7</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
-                                    <button class="btn btn-dark">Agregar al Carrito</button>
-                                </div>
-                            </div>
-                            <div class="card">
-                                <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
-                                </div>
-                                <div class="card-body">
-                                    <h5 class="card-title">Amatista 8</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
+                                    <h5 class="card-title">Cuarzo Rosa</h5>
+                                    <p class="card-text">Piedra anti estrés</p>
+                                    <p class="card-text">$1500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
@@ -167,45 +119,93 @@
                         <div class="container-card">
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                    <img src="./assets/img/cristalroca.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 9</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
+                                    <h5 class="card-title">Cristal de Roca</h5>
+                                    <p class="card-text">Piedra de salud</p>
+                                    <p class="card-text">$1200</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                    <img src="./assets/img/malaquita.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 10</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
+                                    <h5 class="card-title">Malaquita</h5>
+                                    <p class="card-text">Piedra emocional</p>
+                                    <p class="card-text">$900</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                    <img src="./assets/img/aguamarina.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 11</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
+                                    <h5 class="card-title">Aguamarina</h5>
+                                    <p class="card-text">Piedra de relajación</p>
+                                    <p class="card-text">$1500</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
                             <div class="card">
                                 <div class="image-wrapper">
-                                    <img src="./assets/img/amatista.png" class="card-img-top" alt="...">
+                                    <img src="./assets/img/ojodetigre.png" class="card-img-top" alt="...">
                                 </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Amatista 12</h5>
-                                    <p class="card-text">Piedra energetica</p>
-                                    <p class="card-text">$500</p>
+                                    <h5 class="card-title">Ojo de Tigre</h5>
+                                    <p class="card-text">Piedra de libertad</p>
+                                    <p class="card-text">$1300</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div class="container-card">
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/citrino.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Citrino</h5>
+                                    <p class="card-text">Piedra de alegría</p>
+                                    <p class="card-text">$1600</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/pirita.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Pirita</h5>
+                                    <p class="card-text">Piedra de prosperidad</p>
+                                    <p class="card-text">$1800</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/opalo.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Ópalo</h5>
+                                    <p class="card-text">Piedra de intuición</p>
+                                    <p class="card-text">$1200</p>
+                                    <button class="btn btn-dark">Agregar al Carrito</button>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <div class="image-wrapper">
+                                    <img src="./assets/img/fluorita.png" class="card-img-top" alt="...">
+                                </div>
+                                <div class="card-body">
+                                    <h5 class="card-title">Fluorita</h5>
+                                    <p class="card-text">Piedra concentración</p>
+                                    <p class="card-text">$1600</p>
                                     <button class="btn btn-dark">Agregar al Carrito</button>
                                 </div>
                             </div>
